# reversal-curse

./: README.md  pyproject.toml  result.txt  revcurse.py
